--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
-h1 {
-    color: red;
+* {
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    display: flex;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+}
+
+.double-wide {
+    width: 100px;
+    height: 50px;
 }
