--- a/style.css
+++ b/style.css
@@ -5,23 +5,29 @@
 }
 
 .container {
-    width: 400px;
+    margin-top: 15px;
+    width: 204px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: black;
+    border: black 2px solid;
 }
 
 .display {
-    padding: 10px 10px 10px 0;
-    margin: 0 0 0 10px;
+    padding: 10px;
     height: 50px;
     width: 200px;
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: flex-end;
     font-size: 1.98em;
     text-align: right;
     overflow: hidden;
+    background-color: lightgray;
+    border-radius: 5px;
+    border: black 2px solid;
+    border-bottom: black 4px solid;
 }
 
 .row {
@@ -31,6 +37,14 @@
 button {
     width: 50px;
     height: 50px;
+    background-color: lightsalmon;
+    border-radius: 5px;
+}
+
+button:hover {
+    cursor: pointer;
+    /* background-color: rgb(255, 160, 122, 0.7); */
+    border: white 2px solid;
 }
 
 .double-wide {
