--- a/style.css
+++ b/style.css
@@ -34,24 +34,21 @@
     display: flex;
 }
 
-button {
+.button {
     width: 50px;
     height: 50px;
     background-color: lightsalmon;
     border-radius: 5px;
 }
 
-button:hover {
+.button:hover {
     cursor: pointer;
-    /* background-color: rgb(255, 160, 122, 0.7); */
     border: white 2px solid;
 }
 
 .double-wide {
     width: 100px;
     height: 50px;
-}
-
-.highlight {
-    background-color: lightgreen;
+    background-color: lightsalmon;
+    border-radius: 5px;
 }
