--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     align-items: center;
     background-color: black;
     border: black 2px solid;
+    border-radius: 5px;
 }
 
 .display {
@@ -49,6 +50,6 @@
 .double-wide {
     width: 100px;
     height: 50px;
-    background-color: lightsalmon;
+    background-color: black;
     border-radius: 5px;
 }
